<resources>
    <string name="app_name">The Guardian</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_the_guardian">Welcome to the Guardian!</string>
    <string name="create_account">create account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="Account_Created">Account Created!</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up_page_text">Join the team!</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="the_guardian">The Guardian</string>
    <string name="article_thumbnail">Article Thumbnail</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="app_info">App Info</string>
    <string name="other">Other</string>
    <string name="sign_out">Sign Out</string>
    <string name="help">Help</string>
    <string name="headline">Headline</string>
    <string name="your_favorites_list_is_empty">Your favorites list is empty!</string>
    <string name="profile">Profile</string>
    <string name="confirm">Confirm</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="enable_light_mode">Enable Light Mode</string>
    <string name="date">Date</string>
    <string name="section">Section</string>
</resources>
