<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_search"
        android:icon="@drawable/search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/home_toolbar_help"
        android:orderInCategory="50"
        android:title="@string/help"
        app:showAsAction="never" />

    <item android:id="@+id/toolbar_theme_dark"
        android:title="@string/enable_dark_mode"
        app:showAsAction="never"/>

    <item android:id="@+id/toolbar_theme_light"
        android:title="@string/enable_light_mode"
        app:showAsAction="never"/>
</menu>
