<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activityRegister_topText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_page_text"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:padding="50dp"/>

    <EditText
        android:id="@+id/activityRegister_firstName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityRegister_topText"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:hint="@string/first_name"
        tools:ignore="Autofill"
        android:gravity="center"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/activityRegister_lastName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityRegister_firstName"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        android:gravity="center"
        tools:ignore="Autofill"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/activityRegister_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityRegister_lastName"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:gravity="center"
        android:autofillHints="email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/activityRegister_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityRegister_email"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:gravity="center"
        android:autofillHints="password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/activityRegister_confirmPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityRegister_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:gravity="center"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/activityRegister_createAccountBtn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/activityRegister_confirmPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:text="@string/create_account"/>





</RelativeLayout>