<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/activityLogin_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/welcome_to_the_guardian"
            android:textSize="30sp"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintBottom_toTopOf="@id/activityLogin_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/activityLogin_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activityLogin_greeting"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/activityLogin_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activityLogin_greeting" />

        <EditText
            android:id="@+id/activityLogin_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activityLogin_email"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/activityLogin_rememberMeCheckbox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activityLogin_email" />

        <CheckBox
            android:id="@+id/activityLogin_rememberMeCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activityLogin_password"
            android:text="@string/remember_me"
            app:layout_constraintBottom_toTopOf="@id/activityLogin_LoginBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activityLogin_password" />

        <Button
            android:id="@+id/activityLogin_LoginBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/activityLogin_rememberMeCheckbox"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/activityLogin_RegisterBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activityLogin_rememberMeCheckbox" />

        <Button
            android:id="@+id/activityLogin_RegisterBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/activityLogin_LoginBtn"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activityLogin_LoginBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>